crates/gammalooprs/src/uv/snapshots/_gammaloop__uv__tests__three_loop_dot.snap
---
source: src/uv/tests.rs
expression: graph.base_dot()
---
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 0 [color="red:blue;0.5 " ];
  0 -- 1 [color="red:blue;0.5 " ];
  1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
}
